https://bugs.webkit.org/show_bug.cgi?id=50970

Reviewed by Dan Bernstein.

It's arguably a bug, but we don't let inline flow layers paint floating
descendants.  The containing block of the inline flow paints them instead.
However our shouldPaint logic has always been flawed and has turned off propagation
of painting when an inline flow layer is enclosing the float.

Change enclosingSelfPaintingLayer to enclosingFloatPaintingLayer to be more precise
and for now limit it to RenderBoxes.

Added fast/block/float/floatstack.html

WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addOverhangingFloats):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::enclosingFloatPaintingLayer):
* rendering/RenderBox.h:
* rendering/RenderObject.cpp:
* rendering/RenderObject.h:

LayoutTests:

* fast/block/float/floatstack.html: Added.
* platform/mac/fast/block/float/floatstack-expected.checksum: Added.
* platform/mac/fast/block/float/floatstack-expected.png: Added.
* platform/mac/fast/block/float/floatstack-expected.txt: Added.
* platform/mac/fast/repaint/positioned-document-element-expected.checksum:
* platform/mac/fast/repaint/positioned-document-element-expected.png:



Canonical link: https://commits.webkit.org/64410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74063 268f45cc-cd09-0410-ab3c-d52691b4dbfc